<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Common -->
    <string name="app_name">Medly HF</string>
    <string name="action_settings">Settings</string>
	<string name="blank"></string>
	<string name="symptoms_upper_case">SYMPTOMS</string>
    <string name="symptoms_lower_case">symptoms</string>
    <string name="symptom_lower_case">symptom</string>
    <string name="weight">WEIGHT</string>
    <string name="lbs">"lbs"</string>
    <string name="mmHg">mmHg</string>
	<string name="heart_rate">HEART RATE</string>
	<string name="bpm">bpm</string>
	<string name="submit">SUBMIT</string>
	<string name="enter">ENTER</string>
	<string name="recorded_symptoms">Recorded symptoms</string>
	<string name="message_generated_today_at">Message generated today at</string>

   	<!-- Image description for Accessibilities -->
	<string name="icon_blank">Blank icon</string>
	<string name="icon_prev_day">Previous day icon</string>
	<string name="icon_next_day">Next day icon</string>
	<string name="icon_yes_tick">Yes tick icon</string>
	<string name="icon_no_cross">No cross icon</string>
    <string name="icon_sun">Sun icon</string>
    <string name="icon_red_asterisk">Red asterisk icon</string>
    <string name="icon_clock">Clock icon</string>
    <string name="icon_add_context_alarm">Alarm icon</string>
    <string name="icon_add_context_paper">Paper icon</string>
    <string name="icon_add_context_breakfast">Breakfast icon</string>
    <string name="icon_add_context_person">Person icon</string>
    
    <!-- Readings Page -->
    <string name="readings_title_medly">Medly</string>
    <string name="readings_title_hf">" HF"</string>
    <string name="readings_blood_pressure">BLOOD PRESSURE</string>
    <string name="readings_record_symptoms">Record Symptoms</string>
    <string name="readings_morning">MORNING</string>
    <string name="readings_extra_reading">"EXTRA"</string>
    
    <!-- Translators: this format string is for .e.,g "(7 days ago)". Leading Space Required -->
    <string name="daySingular">day</string>
    <string name="dayPlural">days</string>
    <string name="dateFormatString" formatted="false"> (%d %s ago)</string>

    <!-- Contextualization Page -->
    <string name="contextualization_instructions_title">Morning readings are taken:</string>
    <string name="contextualization_instruction_1">Shortly after waking</string>
    <string name="contextualization_instruction_2">After the washroom</string>
    <string name="contextualization_instruction_3">Before having breakfast</string>
    <string name="contextualization_instruction_4">In your birthday suit</string>
    <string name="contextualization_morning">MORNING READING</string>
    <string name="contextualization_extra">EXTRA READING</string>
	<string name="contextualization_tag_reading">Please tag this reading as morning or extra reading</string>

    <!-- Record Symptoms Page -->
    <string name="recordSymptoms_title">Record Symptoms</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    
    <!-- Trend Page -->
    <string name="trend_title">Weight/Symptoms Trend</string>
    <string name="no_more_historical_reading">There is no more historical reading.</string>
    <string name="cannot_navigate_to_future">You can not navigate to future days.</string>
    
    <!-- Really common basic strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="error">Error: </string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="noSymptoms">No symptoms reported</string>
    <string name="taken">Taken</string>
    <string name="testReading">Recorded as a Control Reading</string>
    <string name="unknown">Unknown</string>
    <string name="default_answer_numeric">1</string>

    <!-- Leading Spaces Required in values (not names!) -->
    <string name="high"> High</string>
    <string name="low"> Low</string>

    <!-- Common Menu Items -->
    <string name="mConfig">Settings</string>
    <string name="mExit">Exit</string>
    
    <!-- Standard Reading Type Names -->
    <string name="rtSymptoms">Symptoms</string>
    <string name="rtWeight">Weight</string>
    <string name="rtBP">Blood Pressure</string>
    <string name="rtPulse">Pulse</string>
    <string name="rtBG">Blood Glucose</string>
    <string name="rtECG">ECG</string>
	<!-- These two often travel together -->
	<string name="rtBPAndPulse">BP and Pulse</string>
    
    <!-- Startup -->
    <string name="fail_no_bt">Medly cannot start because this device does not support Bluetooth."</string>

    <!-- Button names for main "menu" (which is really buttons) -->
    <string name="bSummary">Summary</string>
    <string name="bSymptoms">Record Symptoms</string>
    <string name="bWeight">Weight</string>
    <string name="bBP">Blood Pressure</string>
    <string name="bPulse">Pulse</string>
    <string name="bBG">Blood Glucose</string>
    <string name="bGoals">Goals</string>
    <string name="bECG">ECG</string>
    
    <!-- History Navigation -->
    <string name="histLogAm">History Log (Morning)</string>
    <string name="histLogPm">History Log (Afternoon)</string>
    <string name="graphAm">Graph (Morning)</string>
    <string name="graphPm">Graph (Afternoon)</string>
    
    
    <!-- Summary Activity -->
    <string name="title_activity_summary">Summary</string>
    
    <!-- About Activity -->

    <!-- Symptom Recorder Activity -->
    <string name="title_activity_symptoms">Symptoms</string>
    
    <!-- Weight Activity -->
    <string name="title_activity_weight">Weight</string>

    <!-- BP Activity -->
    <string name="title_activity_bp">Blood Pressure</string>
    
    <!-- Pulse Activity -->
    <string name="title_activity_pulse">Pulse</string>
    
    <!-- BG -->
    <string name="title_activity_bg">Blood Glucose</string>
    
    <!-- Reading Contexts -->
    <string name="cMorning">In the morning</string>
    <string name="cOther">Later in the day</string>

    <!-- Summary and other strings -->
    <string name="sAlert">Alert</string>
    <string name="sAbnormal">Abnormal</string>
    <string name="sSummaryReport">Summary Report</string>

    <!-- For Configuration/Settings Screen -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hintPatientId">Patient ID Number</string>
    <string name="hintPassword">Password</string>
    <string name="hintBaseURL">Base URL</string>
    <string name="bTestNetwork">Test Net Config</string>
    <string name="bSaveConfig">Save Configuration</string>
    <string name="network_testing">Network testing in progress&#8230;</string>   
	<string name="you_are_charlattan">You are nothing but a charlattan</string>
	<string name="time_set_request_noted">Time Set request noted</string>
	<string name="not_a_number">Not a number:\u0020</string>

    <!-- Reading Types -->
    <string name="rPulse">Pulse Reading</string>
    <string name="rWeight">Weight Reading</string>
    <string name="rBP">Blood Pressure Reading</string>
    <string name="rBG">Blood Glucose Reading"</string>
    <string name="rECG">ECG Reading</string>
    <string name="rSymptons">Symptoms Survey</string>
    <string name="rUnknown">Reading</string>

    <!-- Reading Statuses -->
    <string name="status_no_message">No message.</string>
    <string name="status_unsent">Not yet sent to server</string>
    <string name="status_sending">Currently being sent to server</string>
    <string name="status_sent">Successfully sent to server</string>
    <string name="status_send_failed">Permanent error received from server</string>

    <!-- Units -->
    <!-- DO NOT CHANGE UNITS WHEN LOCALIZING!! -->
    <string name="uPounds">lbs</string>
    <string name="uKilograms">kg</string>
    <string name="uMMOL">mMo/L</string>
    <string name="uMGDL">mg/dL</string>
    <string name="uPerMin">BPM</string>
    <string name="uMMHg">mmHg</string>

    <!-- For the DeviceEventContextualizer -->
    <string name="title_activity_contextualize">Contextualize this Reading</string>
    <string name="readingTaken" formatted="false">Reading taken at %s</string>
    <string name="notifToContextualize">Was this Reading taken</string>
    <string name="readingSaved">Reading saved</string>
    <string name="readingsSaved">Readings saved</string>
    <string name="readingSavedAs">Reading saved as %s.</string>
    <string name="readingsSavedAs" formatted="false"> %d Readings saved as %s.</string>
    <string name="readingsNotSaved">Not Saved.</string>

    <!-- ECG-specific -->
    <string name="title_activity_ecg">ECG</string>
    <string name="record">Record ECG</string>
  
    <!-- Goals -->
    <string name="title_activity_goals">Goals</string>
    
    <!-- Debug -->
    <string name="title_activity_debug_readins">Readings</string>
    <string name="title_activity_debug_readingsets">Reading Sets</string>
    <string name="security_title">Security</string>
    <string name="security_message">Security Code</string>
    <string name="security_prompt">Enter Security Code:</string>
	<string name="title_activity_debug">Debugging</string>
	<string name="dummy_weight">152</string>
	<string name="dummy_systolic">120</string>
	<string name="dummy_diastolic">101</string>
	<string name="dummy_pulse">70</string>
	<string name="debug_lecture">
	Debugging is dangerous and is only intended for use by qualified developers ("computer programmers")
    at the University Health Network. Injecting false readings here can create all sorts of havoc, 
	and may cause serious medical conditions to get much worse by misleading your caregivers.
	<br/>
	If you are a patient, DO NOT USE THIS PAGE!!!</string>
	<string name="no_values">Nothing to display at present</string> 
	<string name="set_time_now">Current</string>  
    <string name="set_date_popup">Pick Date</string>
    <string name="set_time_popup">Pick Time</string>
    
	<string name="dump_readings">Readings</string>  
	<string name="dump_reading_sets">Reading Sets</string>

</resources>
